<resources>
    <string name="app_name">Clean City</string>
    <string name="report_subject">Pollution report</string>
    <string name="report_description">Pollution at %1$s</string>
    <string name="generating_report">Generating report</string>
    <string name="validationg_image">Validationg image</string>
    <string name="validating_location">Validating location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_title">Welcome</string>
    <string name="welcome_hint_name">Name</string>
    <string name="welcome_hint_mail">Email</string>
    <string name="welcome_hint_phone">Phone number</string>
    <string name="welcome_sign_in">Sign In</string>
</resources>
