<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/background_welcome">


    <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp">


        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="match_parent">


            <TextView android:layout_width="match_parent"
                      android:text="@string/welcome_title"
                      android:textStyle="bold"
                      android:textSize="26sp"
                      android:layout_margin="20dp"
                      android:layout_height="wrap_content"/>




            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/welcome_hint_name"
                        android:id="@+id/Name"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/welcome_hint_mail"
                        android:id="@+id/Mail"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/welcome_hint_phone"
                        android:id="@+id/Phone"
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                    android:text="@string/welcome_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_login"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal|bottom"
                    style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</FrameLayout>